added additional details

--- a/index.html
+++ b/index.html
@@ -37,13 +37,22 @@
 					/>
 				</div>
 
-				<div class="weather-bottom">
+				<div class="weather-bottom active">
 					<h2 class="city-name">Baku,<span class="country">AZ</span></h2>
 					<h2 class="temperature">25°C</h2>
 					<h2 class="weather-description">Cloudy</h2>
 					<h2>Humidity: <span class="humidity"></span></h2>
 					<h2>Wind: <span class="wind"></span></h2>
 				</div>
+
+				<div class="weather-bottom">
+					<h2 >Min Temp: <span class="min-temp"></span> </h2>
+					<h2>Max Temp: <span class="max-temp"></span></h2>
+					<h2>Feels like: <span class="feels-like"></span></h2>
+					<h2>Pressure: <span class="pressure"></span></h2>
+				</div>
+
+				<button class="details-button">More Details</button>
 			</div>
 		</section>
 
